# fastapi-simple-integration

./: .gitignore  README.MD  fastapi_nginx  main.py  pyproject.toml
