[tool.poetry]
name = "fastapi-redis"
version = "0.1.0"
description = "fastapi example with redis"
authors = ["Deon Saunders <51129091+degrasse-python@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aioredis = "2.0.0"
requests = "^2.32.3"
fastapi = "^0.115.0"
redis = "^5.1.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
celery = "^5.4.0"
openmeteo-requests = "^1.3.0"
pydantic = "^2.9.2"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
